traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:37: error: not found: value diago
  else if(diago>=6)// si apr?s gd diago (plus besoin de compteur)
          ^